--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse " id="navbarNavAltMarkup">   <!--cuando aplico "d-flex justify-content-end" me llevael nav a la izquierda pero no funciona la hamburguesa-->
+          <div class="collapse navbar-collapse " id="navbarNavAltMarkup">   
             <div  data-aos="zoom-in-left" data-aos-duration="3000" class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               <a class="nav-link" href="./assets/paginas/galeria.html">Galeria</a>
@@ -64,19 +64,19 @@
             <p class="col-10 col-sm-10 col-md-10 col-xl-11">Fabricamos muebles con la mejor calidad para ti, somos especialistas en la fabricación de muebles hechos a medida</p>   
         </div>
         <div class="cards d-flex flex-wrap justify-content-around">
-            <div class="card m-2" style="width: 18rem;">
+            <div class="card m-2" style="width: 25rem;">
                 <img src="../assets/img/imgind.jpg" class="card-img-top" alt="...">
                 <div class="card-body">                  
                   <p class="card-text">Con Elegancia tu hogar lucira totalmente innovador y vanguardista</p>                  
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 25rem;">
                 <img src="../assets/img/imgin2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">                  
-                  <p class="card-text">Tenemos miles de ideas para ese rincon en tu hogar</p>                  
+                  <p class="card-text">Tenemos miles de ideas para ese rincon en tu comercio</p>                  
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 25rem;">
                 <img src="../assets/img/imgin3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">                  
                   <p class="card-text">Renueva tu oficina con un toque unico y novedoso</p>                  
