--- a/assets/paginas/galeria.html
+++ b/assets/paginas/galeria.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
     <title>Elegancia</title>
@@ -13,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="w-25" src="../img/logo.jpg" alt="">legancia</a>
+          <a data-aos="flip-left" data-aos-duration="3000" class="navbar-brand" href="#"><img class="w-25" src="../img/logo.jpg" alt="">legancia</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -43,21 +44,21 @@
         </div>
         <!--aquie comienza el card de galeria falta 2 img de comercio-->
         <div class="cards d-flex flex-wrap justify-content-around my-4">
-            <div class="card m-2" style="width: 18rem;">
+            <div class="card m-2" style="width: 28rem;">
                 <img src="../img/galeria/gal1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">  
                     <h5 class="card-title">Residencial</h5>
                     <p class="card-text">¡Muebles a la medida para tu Hogar!</p>                  
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 28rem;">
                 <img src="../img/galeria/gal3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Oficinas</h5>                  
                     <p class="card-text">¡Muebles para tu Oficina con diseños funcionales!</p>                  
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 28rem;">
                 <img src="../img/galeria/gal5.jpg" class="card-img-top" alt="...">
                 <div class="card-body"> 
                     <h5 class="card-title">Comerciales</h5>                 
@@ -98,6 +99,10 @@
           <span class="mb-3 mb-md-0 text-muted">&copy;©2022 Marcos Cepeda, los derechos reservados </span>
         </div>      
       </footer>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>       
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>    
 </body>
