--- a/assets/paginas/tienda.html
+++ b/assets/paginas/tienda.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
     <title>Elegancia</title>
@@ -13,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="w-25" src="../img/logo.jpg" alt="">legancia</a>
+          <a data-aos="flip-left" data-aos-duration="3000" class="navbar-brand" href="#"><img class="w-25" src="../img/logo.jpg" alt="">legancia</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -165,6 +166,10 @@
           <span class="mb-3 mb-md-0 text-muted">&copy;©2022 Marcos Cepeda, los derechos reservados </span>
         </div>      
       </footer>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script> 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>    
 </body>
